--- a/style.css
+++ b/style.css
@@ -582,3 +582,39 @@ header {
     }
   }
 }
+
+.agricult{
+
+}
+
+.agrocult-text{
+  padding: 80px 0;
+  & h2{
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+  & h3{
+    font-family: 'Livvic';
+    font-size: 50px;
+    font-weight: bold;
+    margin-bottom: 67px;
+  }
+  & ul{
+    list-style: none;
+  }
+  & li{
+    & h4{
+      font-family: 'Livvic';
+      font-weight: 600;
+      font-size: 24px;
+    }
+    & p{
+      font-size: 18px;
+    }
+    &:first-child{
+      padding-bottom: 60px;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.192);
+      margin-bottom: 60px;
+    }
+  }
+}
