--- a/style.css
+++ b/style.css
@@ -714,3 +714,119 @@ header {
     transform: translateX(-50%);
   }
 }
+.contact{
+  background-color: #334B35;
+  width: 100%;
+  max-width: 1920px;
+  height: 780px;
+  & .container{
+    width: 100%;
+    max-width: 1440px;
+    height: 780px;
+  }
+  & .left__bar{
+    width: 100%;
+    max-width: 643px;
+    height: 571px;
+    /* position: relative;
+    top: 80px; */
+  }
+  & h2{
+    font-family: 'Century Gothic';
+    font-size: 20px;
+    font-weight: 400;
+    margin-bottom: 20px;
+    text-decoration: dashed;
+  }
+  & h3{
+    font-family: 'Livvic';
+    font-size: 50px;
+    font-weight: bold;
+    margin-bottom: 45px;
+  }
+  & p{
+    font-size: 18px;
+    font-weight: 400;
+    margin-bottom: 50px;
+  }
+}
+&>p{
+  &~div{
+    display: flex;
+    flex-direction: column;
+  }
+}
+.phone{
+  margin-bottom: 40px;
+  & span{
+    font-size: 14px;
+    font-weight: 400;
+    margin-bottom: 7px;
+  }
+}
+.email{
+  margin-bottom: 40px;
+  & span{
+    font-size: 14px;
+    font-weight: 400;
+    & a{
+      font-family: 'Livvic';
+      font-size: 20px;
+      font-weight: 500;
+    }
+  }
+}
+.adress{
+  & a{
+    font-size: 20px;
+    font-weight: 500;
+    font-family: 'Livvic';
+  }
+}
+.container-bar{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  max-width: 1440px;
+  height: 780px;
+  align-items: center;
+}
+.contact__form{
+  width: 100%;
+  max-width: ;
+ & input{
+  width: 100%;
+  max-width: 664px;
+  height: 69px;
+  background-color: #263C28;
+  padding: 25px 22px;
+  border-radius: 10px;
+  border: none;
+  margin-bottom: 30px;
+  &::placeholder{
+    color: white;
+  }
+ }
+ & textarea{
+  width: 100%;
+  max-width: 664px;
+  height: 184px;
+  background-color: #263C28;
+  padding: 25px 22px;
+  border-radius: 10px;
+  border: none;
+  margin-bottom: 30px;
+  &::placeholder{
+    color: white;
+  }
+ }
+ & button{
+  background-color: #F7C35F;
+  width: 100%;
+  max-width: 211px;
+  height: 69px;
+  border: none;
+  padding: 25px 50px;
+  border-radius: 20px;
+ }
+}
